--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   toastification: ^1.2.1
   flutter_timer_countdown: ^1.0.7
   time_remaining: ^2.0.0+1
+  image_picker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
