--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_timer_countdown: ^1.0.7
   time_remaining: ^2.0.0+1
   image_picker: ^1.1.0
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
