upload image field - UI changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   workmanager: ^0.5.2
   package_info_plus: ^8.0.0
   url_launcher: ^6.3.0
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
