--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   package_info_plus: ^8.0.0
   url_launcher: ^6.3.0
   connectivity_plus: ^6.0.3
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
