--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: shopease_app_flutter
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,13 +45,13 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   flutter_form_builder: ^9.2.1
   country_picker: ^2.0.25
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.9
   pinput: ^4.0.0
   animate_do: ^3.3.4
   ai_barcode_scanner: ^3.4.3
   camera: ^0.10.5+9
   flutter_barcode_sdk: ^2.2.6
-  path_provider: ^2.1.2
+  path_provider: ^2.1.4
   file_picker: ^5.5.0
   flutter_slidable: ^3.1.0
   toastification: ^1.2.1
@@ -64,6 +63,8 @@ dependencies:
   url_launcher: ^6.3.0
   connectivity_plus: ^6.0.3
   photo_view: ^0.15.0
+  image_gallery_saver: ^2.0.3
+  gallery_saver_plus:
 
 dev_dependencies:
   flutter_test:
@@ -81,7 +82,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -106,13 +106,13 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-   - family: 'Figtree'
-     fonts:
-       - asset: assets/fonts/Figtree-Bold.ttf
-         weight: 700
-       - asset: assets/fonts/Figtree-Regular.ttf
-       - asset: assets/fonts/Figtree-Semibold.ttf
-       
+    - family: "Figtree"
+      fonts:
+        - asset: assets/fonts/Figtree-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Figtree-Regular.ttf
+        - asset: assets/fonts/Figtree-Semibold.ttf
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
