--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   url_launcher: ^6.3.0
   connectivity_plus: ^6.0.3
   photo_view: ^0.15.0
+  flutter_image_compress: ^2.3.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
