--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   flutter_barcode_sdk: ^2.2.6
   path_provider: ^2.1.4
   file_picker: ^5.5.0
-  flutter_slidable: ^3.1.0
+  flutter_slidable: ^4.0.0
   toastification: ^1.2.1
   flutter_timer_countdown: ^1.0.7
   time_remaining: ^2.0.0+1
@@ -65,6 +65,8 @@ dependencies:
   photo_view: ^0.15.0
   flutter_image_compress: ^2.3.0
   cached_network_image: ^3.4.1
+  win32: ^5.10.1
+  video_player: ^2.9.5
 
 dev_dependencies:
   flutter_test:
