--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,8 @@ dependencies:
   flutter_image_compress: ^2.3.0
   cached_network_image: ^3.4.1
   win32: ^5.10.1
-  video_player: ^2.9.5
+  youtube_player_flutter: ^9.1.1
+  tutorial_coach_mark: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -113,7 +114,7 @@ flutter:
         - asset: assets/fonts/Figtree-Bold.ttf
           weight: 700
         - asset: assets/fonts/Figtree-Regular.ttf
-        - asset: assets/fonts/Figtree-Semibold.ttf
+        - asset: assets/fonts/Figtree-SemiBold.ttf
 
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
