--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   win32: ^5.10.1
   youtube_player_flutter: ^9.1.1
   tutorial_coach_mark: ^1.3.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
