--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,11 @@ android {
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
+
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
         }
