--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,8 +70,8 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
 
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             // Signing with the debug keys for now, so `flutter run --release` works.
@@ -86,4 +86,6 @@ flutter {
 
 dependencies {
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
+    implementation "androidx.work:work-runtime:2.8.1"
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
 }
