--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,9 @@ dependencies:
   pinput: ^4.0.0
   animate_do: ^3.3.4
   ai_barcode_scanner: ^3.4.3
-  camera: ^0.10.5+9
   flutter_barcode_sdk: ^2.2.6
+
+  camera: ^0.10.5+9
   path_provider: ^2.1.4
   file_picker: ^5.5.0
   flutter_slidable: ^4.0.0
@@ -69,6 +70,7 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   tutorial_coach_mark: ^1.3.0
   dotted_border: ^2.1.0
+  google_mlkit_text_recognition: ^0.15.0
 
 dev_dependencies:
   flutter_test:
