--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+3
+version: 1.3.0+6
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -52,13 +52,13 @@ dependencies:
   flutter_barcode_sdk: ^2.2.6
   camera: 
   path_provider: ^2.1.4
-  file_picker: ^5.5.0
+  file_picker: ^8.0.3
   flutter_slidable: ^4.0.0
   toastification: ^1.2.1
   flutter_timer_countdown: ^1.0.7
   time_remaining: ^2.0.0+1
   image_picker: ^1.1.0
-  workmanager: ^0.5.2
+#  workmanager: ^0.5.2
   package_info_plus: ^8.0.0
   url_launcher: ^6.3.0
   connectivity_plus: 
