--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,6 @@ dependencies:
   flutter_barcode_sdk: ^2.2.6
   camera: 
   path_provider: ^2.1.4
-  file_picker: ^8.0.3
   flutter_slidable: ^4.0.0
   toastification: ^1.2.1
   flutter_timer_countdown: ^1.0.7
@@ -69,7 +68,7 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   tutorial_coach_mark: ^1.3.0
   dotted_border: ^2.1.0
-  google_mlkit_text_recognition: ^0.11.0
+#  google_mlkit_text_recognition: ^0.9.0
 
 dev_dependencies:
   flutter_test:
