--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.3.0+6
+version: 1.2.0+6
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -68,6 +68,7 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   tutorial_coach_mark: ^1.3.0
   dotted_border: ^2.1.0
+  new_version_plus: ^0.0.9
 #  google_mlkit_text_recognition: ^0.9.0
 
 dev_dependencies:
